@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - Added SS tag_sequence to reported matches
+ 
 release 69.12.0
  - Removed an unused script - genotype_call_results_reporter.
  - Switched the QC outcomes reporter to retrieve LIMS server URL from
